--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,17 +35,9 @@
                 Network
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Artificial Intelligence</a></li>
-                <li><a class="dropdown-item" href="#">Banking</a></li>
-                <li><a class="dropdown-item" href="#">Cloud</a></li>
-                <li><a class="dropdown-item" href="#">Code</a></li>                
-                <li><a class="dropdown-item" href="#">Commerce</a></li>
-                <li><a class="dropdown-item" href="#">Documents</a></li>     
-                <li><a class="dropdown-item" href="#">Financial</a></li>              
-                <li><a class="dropdown-item" href="#">Infrastructure</a></li>                             
-                <li><a class="dropdown-item" href="#">Messaging</a></li>
-                <li><a class="dropdown-item" href="#">Travel</a></li>
-                <li><a class="dropdown-item" href="#">Videos</a></li>
+                {% for network in site.data.apis.network %}
+                <li><a class="dropdown-item" href="{{ network.url | replace: "apis.json","" }}">{{ network.name }}</a></li>
+                {% endfor %}               
               </ul>
             </li>
           </ul>
